--- a/test.html
+++ b/test.html
@@ -2,52 +2,62 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>testing</title>
-    <style>
-        body {
-            margin: 0;
-        }
-    </style>
+	<meta charset="utf-8">
+	<title>testing</title>
+	<style>
+		body {
+			margin: 0;
+		}
+	</style>
 </head>
+
 <body>
-    <script src="js/three.js"></script>
-    <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>
-    <script>
-        const scene = new THREE.Scene();
-        const renderer = new THREE.WebGLRenderer();
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r126/three.min.js" integrity="sha512-n8IpKWzDnBOcBhRlHirMZOUvEq2bLRMuJGjuVqbzUJwtTsgwOgK5aS0c1JA647XWYfqvXve8k3PtZdzpipFjgg==" crossorigin="anonymous"></script>
+	<script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script>
+	<script>
+		const scene = new THREE.Scene();
+		const renderer = new THREE.WebGLRenderer();
+		const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
 
-        let light;
-        let mesh;
+		let light;
+		let mesh;
 
-        function init(){
-            scene.background = new THREE.Color('black');
-            camera.position.set(0,10,20);
-            renderer.setSize(window.innerWidth, window.innerHeight);
-            document.body.appendChild(renderer.domElement);
-        }
+		function init() {
+			scene.background = new THREE.Color('white');  
+			camera.position.set(0, 10, 20);
+			renderer.setSize(window.innerWidth, window.innerHeight);
+			document.body.appendChild(renderer.domElement);
+		}
 
-        function setLight(){
-            light = new THREE.AmbientLight(0xffffff);
-            scene.add(light);
-        }
+		function setLight() {
+			// light = new THREE.AmbientLight(0xffffff);
+			light = new THREE.DirectionalLight(0xcccccc, 1); 
+			scene.add(light);
+		}
 
-        function loadGLTF(){
-            let loader = new THREE.GLTFLoader();
+		function loadGLTF() {
+			let loader = new THREE.GLTFLoader();
 
-            loader.load('Audi R8.gltf', (gltf) => {
-                mesh = gltf.scene;
-                scene.add(mesh);
-                mesh.setPosition(0, 10, 15);
-            })
-        }
+			loader.load('Audi R8.gltf', (gltf) => {
+				mesh = gltf.scene;
+				scene.add(mesh);
+				// mesh.setPosition(0, 10, 15);
+			})
+		}
 
-        init();
-        setLight();
-        loadGLTF();
+		
+		init();
+		setLight();
+		loadGLTF();
 
-    </script>
+
+		function animate() {
+			requestAnimationFrame(animate);
+			renderer.render(scene, camera);
+		}
+
+		animate()
+	</script>
 </body>
 
 </html>
