--- a/test.html
+++ b/test.html
@@ -18,9 +18,14 @@
 		const scene = new THREE.Scene();
 		const renderer = new THREE.WebGLRenderer();
 		const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 1000);
-
+		
+		const pointer = new THREE.Vector2();
+		const raycaster = new THREE.Raycaster();
+		
 		let light;
-		let mesh;
+		let mesh; 
+		
+		let rotationVal = 0.1;
 
 		function init() {
 			scene.background = new THREE.Color('white');  
@@ -48,17 +53,56 @@
 		}
 
 		function animate() {
-			requestAnimationFrame(animate);
 			if(mesh && mesh.rotation){
 				mesh.rotation.y -= 0.005;
 			}
+
+
+			requestAnimationFrame(animate);
 			renderer.render(scene, camera);
+		}
+
+		function setupKeyControls(){
+			document.onkeydown = function (e){
+				if(e.key == 'a'){
+					camera.rotation.y += rotationVal;
+				}
+				else if(e.key == 'd'){
+					camera.rotation.y -= rotationVal;
+				}
+				else if(e.key == 'w'){
+					camera.rotation.x += rotationVal;
+				}
+				else if(e.key == 's'){
+					camera.rotation.x -= rotationVal;
+				}
+				else if(e.key == ']'){
+					rotationVal += 0.1;
+				}
+				else if(e.key == '['){
+					rotationVal -= 0.1;
+				}
+			}
 		}
 
 		init();
 		setLight();
 		loadGLTF();
-		animate()
+		animate();
+		setupKeyControls();
+
+		const onMouseMove = (e) => {
+			pointer.x = (e.clientX / window.innerWidth) * 2 - 1;
+			pointer.y = -(e.clientY / window.innerHeight) * 2 + 1;
+		}
+
+		document.addEventListener( 'mousewheel', (event) => {
+    		camera.position.z +=	event.deltaY/500;d
+		});
+		window.addEventListener('mousemove', onMouseMove);
+		document.addEventListener('mousedown', onDocumentMouseDown, false);
+		document.addEventListener('mousemove', onDocumentMouseMove, false);
+		document.addEventListener('mouseup', onDocumentMouseUp, false);
 	</script>
 </body>
 
