--- a/test.html
+++ b/test.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+	<style>
 
+	</style>
 <head>
 	<meta charset="utf-8">
 	<title>testing</title>
@@ -14,7 +16,7 @@
 <body>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r126/three.min.js" integrity="sha512-n8IpKWzDnBOcBhRlHirMZOUvEq2bLRMuJGjuVqbzUJwtTsgwOgK5aS0c1JA647XWYfqvXve8k3PtZdzpipFjgg==" crossorigin="anonymous"></script>
 	<script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/main.js" type="module"></script>
 </body>
 
 </html>
