--- a/demo/demo.html
+++ b/demo/demo.html
@@ -33,7 +33,7 @@
 			}
 	</script>
 
-	<script type="module" src="main.js"></script>
+	<script type="module" src="demo.js"></script>
 </body> 
 
 </html>
