--- a/demo/demo.html
+++ b/demo/demo.html
@@ -22,6 +22,7 @@
 
 <body>
 	<button>Animate</button> 
+	<a href="../index.html">Go to the future</a>
 	<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 
 	<script type="importmap">
